<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:layout_gravity="center"
        android:background="@color/white">

    <TextView
            android:id="@+id/addEditLocationDialogTitle"
            style="@style/defaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/large_text"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/add_location_dialog_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/addEditLocationLatitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/latitude_hint"
            android:inputType="numberDecimal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/addEditLocationDialogTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/addEditLocationLongitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/longitude_hint"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/addEditLocationLatitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/addEditLocationTag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/tag_hint"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/addEditLocationLongitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/addEditLocationAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/address_hint"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/addEditLocationTag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/addEditCancelButton"
            style="@style/defaultTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/addEditLocationAddress"
            app:layout_constraintEnd_toStartOf="@id/addEditOkButton"/>

    <TextView
            android:id="@+id/addEditOkButton"
            style="@style/defaultTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@drawable/ok_button_color_selector"
            android:text="@string/ok"
            android:textStyle="bold"
            android:padding="@dimen/small_margin"
            android:enabled="false"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/addEditLocationAddress"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>