<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/emptyLayoutProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/emptyLayoutEmptyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/no_items"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/emptyLayoutTryAgainLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/emptyLayoutErrorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/error_something_went_wrong"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="MissingPrefix" />

        <Button
            android:id="@+id/emptyLayoutTryAgainButton"
            style="@style/whiteRoundedButton"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:text="@string/error_retry" />

    </LinearLayout>
</merge>
